--- a/src/main/resources/scenes/viewer_scene.fxml
+++ b/src/main/resources/scenes/viewer_scene.fxml
@@ -9,7 +9,7 @@
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.etu.cgvm.ui.controllers.ViewerSceneController">
     <MenuBar VBox.vgrow="NEVER">
         <Menu mnemonicParsing="false" text="Файл">
-            <MenuItem mnemonicParsing="false" onAction="#openFile" text="Открыть CGIF/RDF…"/>
+            <MenuItem mnemonicParsing="false" onAction="#openFile" text="Открыть CGIF/XML…"/>
             <MenuItem mnemonicParsing="false" onAction="#saveAsFile" text="Сохранить как…"/>
             <SeparatorMenuItem mnemonicParsing="false"/>
             <MenuItem mnemonicParsing="false" onAction="#closeApp" text="Закрыть"/>
@@ -24,7 +24,8 @@
                 <ToggleButtonGroup fx:id="notationSelector" layoutX="197.0" layoutY="33.0" selectionType="SINGLE"
                                    AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
                     <ToggleButton selected="true" text="CGIF" textAlignment="CENTER"/>
-                   <!-- <ToggleButton text="RDF" textAlignment="CENTER"/> -->
+                    <ToggleButton text="XML" textAlignment="CENTER"/>
+                    <!-- <ToggleButton text="RDF" textAlignment="CENTER"/> -->
                 </ToggleButtonGroup>
                 <Label layoutX="29.0" layoutY="33.0" text="Входной формат" AnchorPane.leftAnchor="30.0"
                        AnchorPane.topAnchor="33.0">
